--- a/style.css
+++ b/style.css
@@ -122,6 +122,6 @@ p {font-family: Arial; size:5px;}
 h2 {
 	border-bottom-style: dotted;
 	border-bottom-width: medium;
-	border-bottom-color: #ededed;
+	border-bottom-color: #d1d1d1;
 }
 	
